--- a/explore_california/tours.html
+++ b/explore_california/tours.html
@@ -87,7 +87,7 @@
             </div>
             <div class="tourDescription">
               <h2>California Hotsprings</h2>
-              <p><img src="assets/images/springs_desc_bug.gif" width="195" height="120" alt="California Hot Springs" />Let's be honest, you have no idea what a hot spring is...do you? Well, we do, and we can't wait for you to experience the relaxing warmth of "nature's hot-tubs!" We offer packages that range from all-inclusive hot spring resorts to camping opportunities next to some of the country's last remaining primitive springs.<a href="tourDetail_hotsprings.html" title="California Hotsprings" class="more">learn more!</a></p>
+              <p><img src="assets/images/springs_desc_bug.gif" width="195" height="120" alt="California Hot Springs" />Let's be honest, you have no idea what a hot spring is...do you? Well, we do, and we can't wait for you to experience the relaxing warmth of "nature's hot-tubs!" We offer packages that range from all-inclusive hot spring resorts to camping opportunities next to some of the country's last remaining primitive springs.<a href="tour_Detail_hotsprings.html" title="California Hotsprings" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
               <h2>Cycle California</h2>
@@ -103,7 +103,7 @@
             </div>
             <div class="tourDescription">
               <h2>Nature Watch</h2>
-              <p><img src="assets/images/nature_desc_bug.gif" width="195" height="120" alt="Nature Watch" />If you love the outdoors, nature, and the environment, California is the place for you! Our eco-tours range from watching seals and whales to exploring the desert for rare lizards and fauna. As inspirational as they are educational, our Nature Watch packages bring you the full range of California's natural beauty. <a href="tourDetail_nature.html" title="Nature Watch" class="more">learn more!</a></p>
+              <p><img src="assets/images/nature_desc_bug.gif" width="195" height="120" alt="Nature Watch" />If you love the outdoors, nature, and the environment, California is the place for you! Our eco-tours range from watching seals and whales to exploring the desert for rare lizards and fauna. As inspirational as they are educational, our Nature Watch packages bring you the full range of California's natural beauty. <a href="tour_Detail_nature.html" title="Nature Watch" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
               <h2>Snowboard Cali</h2>
@@ -111,7 +111,7 @@
             </div>
             <div class="tourDescription">
               <h2>Taste of California</h2>
-              <p><img src="assets/images/taste_desc_bug.gif" width="195" height="140" alt="Taste of California" />Tour of the wine country? Tour of the olive groves? We couldn't decide so we put them together in one of our most amazing tour packages ever. Taste of California immerses you in the serene, romantic lifestyle of the California wine country and olive groves. Along the way you'll experience some of the best cuisine in the world, all made from fresh local ingredients by some of the nation's most renown chefs. Bon Appetit! <a href="tourDetail_taste.html" title="Taste of California" class="more">learn more!</a></p>
+              <p><img src="assets/images/taste_desc_bug.gif" width="195" height="140" alt="Taste of California" />Tour of the wine country? Tour of the olive groves? We couldn't decide so we put them together in one of our most amazing tour packages ever. Taste of California immerses you in the serene, romantic lifestyle of the California wine country and olive groves. Along the way you'll experience some of the best cuisine in the world, all made from fresh local ingredients by some of the nation's most renown chefs. Bon Appetit! <a href="tour_Detail_taste.html" title="Taste of California" class="more">learn more!</a></p>
             </div>
           </div>
         </div>
