--- a/explore_california/tours.html
+++ b/explore_california/tours.html
@@ -95,11 +95,11 @@
             </div>
             <div class="tourDescription">
               <h2>From Desert to Sea</h2>
-              <p><img src="assets/images/desert_desc_bug.gif" width="195" height="120" alt="From Desert to Sea" />Our most wide-ranging tour option! Come explore California from the stunning deserts all the way to our beautiful coast. Along the way you'll travel through breathtaking mountain ranges and some of the nation's most fertile farmland as you see why California is regarded as the most diverse state in the nation! Come see ALL that California has to offer! <a href="tourDetail_desert.html" title="Desert to Sea" class="more">learn more!</a></p>
+              <p><img src="assets/images/desert_desc_bug.gif" width="195" height="120" alt="From Desert to Sea" />Our most wide-ranging tour option! Come explore California from the stunning deserts all the way to our beautiful coast. Along the way you'll travel through breathtaking mountain ranges and some of the nation's most fertile farmland as you see why California is regarded as the most diverse state in the nation! Come see ALL that California has to offer! <a href="tour_Detail_desert.html" title="Desert to Sea" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
               <h2>Kids California</h2>
-              <p><img src="assets/images/kids_desc_bug.gif" width="195" height="120" />Over and over again our customer support people would hear, "but what if we have kids?" when describing a tour. Then it hit us...why not create tours specifically for kids?! California is an amazing playground for everyone and should be experienced by all. From amazing  museums, outstanding parks, Disney, and kid-centered nature experiences, Kids California truly has it all! <a href="tourDetail_kids.html" title="Kids California" class="more">learn more!</a></p>
+              <p><img src="assets/images/kids_desc_bug.gif" width="195" height="120" />Over and over again our customer support people would hear, "but what if we have kids?" when describing a tour. Then it hit us...why not create tours specifically for kids?! California is an amazing playground for everyone and should be experienced by all. From amazing  museums, outstanding parks, Disney, and kid-centered nature experiences, Kids California truly has it all! <a href="tour_Detail_kids.html" title="Kids California" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
               <h2>Nature Watch</h2>
@@ -107,7 +107,7 @@
             </div>
             <div class="tourDescription">
               <h2>Snowboard Cali</h2>
-              <p><img src="assets/images/snow_desc_bug.gif" width="195" height="120" alt="Snow Cali" />California has some of the best snowboarding in the US and at Explore California we've combed the runs to offer you the best resorts in the state. We even offer multi-resort packages for those that just can't get enough of that pack and grind. See you on the slopes! <a href="tourDetail_snowboard.html" title="Snowboard Cali" class="more">learn more!</a></p>
+              <p><img src="assets/images/snow_desc_bug.gif" width="195" height="120" alt="Snow Cali" />California has some of the best snowboarding in the US and at Explore California we've combed the runs to offer you the best resorts in the state. We even offer multi-resort packages for those that just can't get enough of that pack and grind. See you on the slopes! <a href="tour_Detail_snowboard.html" title="Snowboard Cali" class="more">learn more!</a></p>
             </div>
             <div class="tourDescription">
               <h2>Taste of California</h2>
